--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="c"></canvas>
     <div id="uiContainer">
       <div id="ui">
         <div id="x"></div>
@@ -57,15 +57,8 @@
          gl_FragColor = u_color;
       }
     </script>
-    <!--
-for most samples webgl-utils only provides shader compiling/linking and
-canvas resizing because why clutter the examples with code that's the same in every sample.
-See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-for webgl-utils, m3, m4, and webgl-lessons-ui.
--->
-    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-    <script src="https://webglfundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+    <script src="webgl-utils.js"></script>
+    <script src="webgl-lessons-ui.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
